# compilers

./: .gitignore  CMakeLists.txt  Makefile  README.md  UnionManager.cpp  UnionManager.h  dataStructs.h  parser.y  scanner.l
src/: Block.cpp  BlockList.cpp  CMakeLists.txt  Scope.cpp  SymbolTable.cpp  UnionManager.cpp  Variable.cpp  block.cpp  for_stmt.cpp  func_def_stmt.cpp  if_stmt.cpp  instruction_opcodes.cpp  loop_stmt.cpp  opcode_dispatcher.cpp  parser.y  parser_manager.cpp  program_consts.cpp  program_stack.cpp  quad.cpp  scanner.hpp  scanner.l  symbol_table.cpp  tablemake_elems_stmt.cpp  tablemake_pairs_stmt.cpp  tablemake_stmt.cpp  vm_arg.cpp  while_stmt.cpp
src/avm/src/: CMakeLists.txt  avm_main.cpp  binary_parser.cpp  binary_parser.h  main.cpp
src/avm/src/binary_parser/: CMakeLists.txt
src/avm/src/code_segment/: CMakeLists.txt
src/avm/src/constants/: CMakeLists.txt
src/avm/src/cpu/: CMakeLists.txt
src/avm/src/exec/: CMakeLists.txt
src/avm/src/library_functions/: CMakeLists.txt
src/avm/src/memcell/: CMakeLists.txt
src/avm/src/memory/: CMakeLists.txt
src/avm/src/registers/: CMakeLists.txt
src/avm/src/signals/: CMakeLists.txt
src/avm/src/stack_segment/: CMakeLists.txt
src/block/: Block.cpp  block.cpp
src/block_stack/: BlockStack.cpp
src/constant/: bool_constant.cpp  nil_constant.cpp  string_constant.cpp
src/constant/numeric_constant/: double_constant.cpp  int_constant.cpp
src/expression/: CMakeLists.txt  binary_expr.cpp  bool_constant.cpp  bool_expr.cpp  call.cpp  call_suffix.cpp  constant.cpp  double_constant.cpp  expression.cpp  formal_variable.cpp  function.cpp  function_call.cpp  function_def.cpp  global_variable.cpp  indexed_table_item.cpp  int_constant.cpp  library_function.cpp  local_variable.cpp  mapped_table_item.cpp  nil_constant.cpp  primary.cpp  string_constant.cpp  symbol.cpp  table_item.cpp  tablemake.cpp  tablemake_elems.cpp  tablemake_pairs.cpp  user_function.cpp
src/expression/constant/: bool_constant.cpp  nil_constant.cpp  string_constant.cpp
src/expression/constant/numeric_constant/: double_constant.cpp  int_constant.cpp
src/expression/function_call/: function_call.cpp
src/expression/symbol/: symbol.cpp
src/expression/symbol/function/: function.cpp  library_function.cpp  user_function.cpp
src/expression/symbol/variable/: formal_variable.cpp  global_variable.cpp  local_variable.cpp  variable.cpp
src/id/: Id.cpp
src/instruction_opcodes/: instruction_opcodes.cpp
src/parser_manager/: ParserManager.cpp  parser_manager.cpp
src/program_stack/: ProgramStack.cpp  program_stack.cpp
src/quad/: quad.cpp
src/statement/: CMakeLists.txt  for_stmt.cpp  func_def_stmt.cpp  if_stmt.cpp  loop_stmt.cpp  statement.cpp  while_stmt.cpp
src/symbol_table/: SymbolTable.cpp  symbol_table.cpp
src/symbol_table/block/: Block.cpp
src/symbol_table/symbol_table_entry/: SymbolTableEntry.cpp  symbol_table_entry.cpp
src/symbol_table/symbol_table_entry/function_entry/: FunctionEntry.cpp  function_entry.cpp
src/symbol_table/symbol_table_entry/variable_entry/: variable_entry.cpp
src/target_code/: CMakeLists.txt  block.cpp  func_def_stmt.cpp  instruction.cpp  instruction_factory.cpp  loop_stmt.cpp  make_operand_visitor.cpp  opcode_dispatcher.cpp  parsed_stmts.cpp  parser.y  program_consts.cpp  quad.cpp  scanner.hpp  scanner.l  target_code.cpp  vm_arg.cpp  vm_opcodes.cpp  vmarg_factory.cpp
src/target_code/include/: instruction.h  instruction_factory.h  userfunc_entry.h  vm_arg.h  vmarg_factory.h
src/target_code/intermediate_code/: CMakeLists.txt  for_stmt.cpp  func_def_stmt.cpp  if_stmt.cpp  instruction_opcodes.cpp  intermediate_code.cpp  loop_stmt.cpp  quad.cpp  while_stmt.cpp
src/target_code/intermediate_code/syntax_analysis/: CMakeLists.txt  block.cpp  program_stack.cpp  symbol_table.cpp  syntax_analysis.cpp
src/target_code/src/: CMakeLists.txt  incomplete_jump.h  instruction.cpp  instruction_factory.cpp  make_operand_visitor.cpp  make_operand_visitor.h  opcode_dispatcher.cpp  parser.y  program_consts.cpp  program_consts.h  scanner.l  target_code.cpp  target_code.h  vm_arg.cpp  vmarg_factory.cpp
src/target_code/src/expression/: CMakeLists.txt
src/target_code/src/intermediate_code/: CMakeLists.txt
src/target_code/src/syntax_analysis/: CMakeLists.txt
src/target_code/test/: CMakeLists.txt  intermediate_code_test.cpp  syntax_analysis_test.cpp  target_code_test.cpp
src/variable/: Variable.cpp
src/virtual_machine/: CMakeLists.txt  avm_code_segment.cpp  avm_code_stack.cpp  avm_cpu.cpp  avm_main.cpp  avm_memcell.cpp  avm_stack_segment.cpp  binary_parser.cpp  program_consts.cpp
src/virtual_machine/code_segment/: avm_code_segment.cpp
src/virtual_machine/constants/: CMakeLists.txt  constants.cpp
src/virtual_machine/cpu/: CMakeLists.txt  avm_cpu.cpp
src/virtual_machine/library_functions/: CMakeLists.txt
src/virtual_machine/memcell/: avm_memcell.cpp
src/virtual_machine/stack_segment/: CMakeLists.txt  avm_stack_segment.cpp
test/: CMakeLists.txt  avm_test.cpp  binary_parser_test.cpp  block_test.cpp  intermediate_code_test.cpp  opcode_dispatcher_test.cpp  parser_manager_test.cpp  parser_test.cpp  program_stack_test.cpp  quad_test.cpp  stack_segment_test.cpp  symbol_table_test.cpp  syntax_analysis_test.cpp  target_code_test.cpp
test/files/phase2_tests/Errors/: Error0.asc  Error1.asc  Error10.asc  Error11.asc  Error12.asc  Error2.asc  Error3.asc  Error4.asc  Error5.asc  Error6.asc  Error7.asc  Error8.asc  Error9.asc
test/files/phase2_tests/Working/: Anonymous.asc  Block.asc  Circle.asc  GlobalAndLocal.asc  Grammar.asc  Random.asc  ShadowedNameOffunctions.asc  Simple.asc  Tree.asc
test/files/phase3_tests/arithmetic/: function_id_error.asc  minusminus_prefix.asc  spaghetti.asc  (+3 more)
test/suites/: parserTest.cpp  parser_test.cpp  quad_test.cpp
test/suites/block/: BlockTest.cpp  block_test.cpp
test/suites/parser_manager/: parserManagerTest.cpp  parser_manager_test.cpp
test/suites/program_stack/: ProgramStackTest.cpp  program_stack_test.cpp
test/suites/symbol_table/: SymbolTableTest.cpp  symbol_table_test.cpp
(+482 files in other folders)
