add_library(expression
    arithmetic_expr.cpp assign_expr.cpp binary_expr.cpp bool_constant.cpp
    call_suffix.cpp call.cpp double_constant.cpp expression.cpp
    int_constant.cpp nil_constant.cpp primary.cpp string_constant.cpp
    symbol.cpp tablemake_elems.cpp tablemake_pairs.cpp tablemake.cpp 
    bool_expr.cpp 
)